samples/_failures_safe/1761614495_e27d94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05d1eb07.c: In function ‘main’:
./samples/SAFE/__tmp_05d1eb07.c:151:21: error: expected declaration or statement at end of input
  151 |                     printf("\nMatrix Addition Result:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_05d1eb07.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05d1eb07.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05d1eb07.c:151:21: error: expected declaration or statement at end of input
